add & update: striver sheets cleaned data; notebooks are fully async now

--- a/data/data-cleaning/striver-75.ipynb
+++ b/data/data-cleaning/striver-75.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
+   "id": "885fdd78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
+   "id": "d9760614",
    "metadata": {},
    "outputs": [
     {
@@ -34,17 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
+   "id": "c97fb815",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet_path = \"../raw-data/striver/sde-sheet-response-data.json\"\n",
-    "export_file = \"../cleaned-data/striver/sde.json\""
+    "sheet_path = \"../raw-data/striver/blind-75-response-data.json\"\n",
+    "export_file = \"../cleaned-data/striver/75.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
+   "id": "15db718b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +63,7 @@
     "        \"original_title\": topic[\"title\"],\n",
     "        \"yt\": topic[\"yt_link\"],\n",
     "        \"post\": topic[\"post_link\"],\n",
-    "        \"step_title\": topic[\"head_step_no\"]\n",
+    "        \"step_title\": topic[\"head_step_no\"],\n",
     "    }\n",
     "    for step in raw[\"sheetData\"]\n",
     "    for topic in step[\"topics\"]\n",
@@ -70,7 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
+   "id": "3fd32ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 25,
+   "id": "ccfc5394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
+   "id": "253cd313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
+   "id": "cb4114b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 3)"
+       "(75, 3)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
+   "id": "35eaf3bf",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +142,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,81 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
+   "id": "21627f7e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "url               https://leetcode.com/accounts/login/?next=/pro...\n",
-       "original_title                                The Celebrity Problem\n",
-       "step_title                                  Stack and Queue Part-II\n",
-       "Name: 90, dtype: object"
+       "(0, 3)"
       ]
      },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[90]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Replace premium LeetCode problem with LintCode link\n",
-    "df.at[90, \"url\"] = \"https://www.lintcode.com/problem/645/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 3)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "redirect_urls = df[df[\"url\"].str.contains(\"implement-strstr\")]\n",
-    "redirect_urls.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix the redirect urls\n",
-    "df.at[97, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\"\n",
-    "df.at[98, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 3)"
-      ]
-     },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,14 +178,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
+   "id": "c8343959",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total unique URLs with duplicates: 9\n"
+      "Total unique URLs with duplicates: 0\n"
      ]
     }
    ],
@@ -251,38 +197,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
+   "id": "8d5fcf3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filter list is empty. Trying to expand all 191 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-sde-urls-expanded.json\n",
+      "Filter list is empty. Trying to expand all 75 URLs.\n",
+      "Resume option is set to false. Deleted previous checkpoint file: striver-75-urls-expanded.json\n",
       "\n",
       "Processing batch 1/1\n",
       "Loaded 0 results from checkpoint\n",
-      "Processing 191 pending URLs in this batch\n"
+      "Processing 75 pending URLs in this batch\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 191/191 [00:06<00:00, 27.57it/s]"
+      "Expanding URLs: 100%|██████████| 75/75 [00:01<00:00, 54.01it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress saved to striver-sde-urls-expanded.json\n",
+      "Progress saved to striver-75-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
-      "Progress saved to striver-sde-urls-expanded.json\n",
+      "Progress saved to striver-75-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "191/191 URLs expanded in 9.93 seconds.\n"
+      "75/75 URLs expanded in 2.57 seconds.\n"
      ]
     },
     {
@@ -297,21 +244,22 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "standardised_df = await standardise_urls_async(df, \"striver-sde-urls-expanded.json\")"
+    "standardised_df = await standardise_urls_async(df, \"striver-75-urls-expanded.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
+   "id": "8fbceaf2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 5)"
+       "(75, 5)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
+   "id": "a64cfbe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,16 +283,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
+   "id": "f8b681eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 6)"
+       "(75, 6)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
+   "id": "cc226563",
    "metadata": {},
    "outputs": [
     {
@@ -389,11 +340,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
-       "      <td>Set Matrix Zeros</td>\n",
-       "      <td>Arrays</td>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
+       "      <td>https://leetcode.com/problems/two-sum/</td>\n",
+       "      <td>2Sum Problem</td>\n",
+       "      <td>Array</td>\n",
+       "      <td>https://leetcode.com/problems/two-sum/</td>\n",
+       "      <td>https://leetcode.com/problems/two-sum/</td>\n",
        "      <td>problem</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -401,17 +352,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                url    original_title  \\\n",
-       "0  https://leetcode.com/problems/set-matrix-zeroes/  Set Matrix Zeros   \n",
+       "                                      url original_title step_title  \\\n",
+       "0  https://leetcode.com/problems/two-sum/   2Sum Problem      Array   \n",
        "\n",
-       "  step_title                                      expanded_url  \\\n",
-       "0     Arrays  https://leetcode.com/problems/set-matrix-zeroes/   \n",
+       "                             expanded_url  \\\n",
+       "0  https://leetcode.com/problems/two-sum/   \n",
        "\n",
-       "                              expanded_stripped_url     type  \n",
-       "0  https://leetcode.com/problems/set-matrix-zeroes/  problem  "
+       "                    expanded_stripped_url     type  \n",
+       "0  https://leetcode.com/problems/two-sum/  problem  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,38 +373,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
+   "id": "71a2bc39",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 191 URLs.\n",
+      "Found 75 URLs.\n",
       "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
-      "Batch 1/1: items 0-190\n",
+      "Batch 1/1: items 0-74\n",
       "Loaded 0 from checkpoint\n",
-      "Processing 191 URLs...\n"
+      "Processing 75 URLs...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 191/191 [00:06<00:00, 30.96it/s] "
+      "Fetching items: 100%|██████████| 75/75 [00:02<00:00, 34.46it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved progress (191 items) to striver-sde-info-added.json\n",
+      "Saved progress (75 items) to striver-75-info-added.json\n",
       "------------------------------\n",
-      "Saved progress (191 items) to striver-sde-info-added.json\n",
+      "Saved progress (75 items) to striver-75-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 191/191 items in 6.2s.\n"
+      "Fetched 75/75 items in 2.2s.\n"
      ]
     },
     {
@@ -469,21 +421,22 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "final_df = await fetch_info(standardised_df, \"striver-sde-info-added.json\")"
+    "final_df = await fetch_info(standardised_df, \"striver-75-info-added.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
+   "id": "12d12e98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 9)"
+       "(75, 9)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +447,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
+   "id": "eef31781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc6724a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -529,5 +484,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
