--- a/data/data-cleaning/striver-79.ipynb
+++ b/data/data-cleaning/striver-79.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
+   "id": "885fdd78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
+   "id": "d9760614",
    "metadata": {},
    "outputs": [
     {
@@ -34,17 +36,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
+   "id": "c97fb815",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sheet_path = \"../raw-data/striver/sde-sheet-response-data.json\"\n",
-    "export_file = \"../cleaned-data/striver/sde.json\""
+    "sheet_path = \"../raw-data/striver/79-sheet-response-data.json\"\n",
+    "export_file = \"../cleaned-data/striver/79.json\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
+   "id": "15db718b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +63,7 @@
     "        \"original_title\": topic[\"title\"],\n",
     "        \"yt\": topic[\"yt_link\"],\n",
     "        \"post\": topic[\"post_link\"],\n",
-    "        \"step_title\": topic[\"head_step_no\"]\n",
+    "        \"step_title\": topic[\"head_step_no\"],\n",
     "    }\n",
     "    for step in raw[\"sheetData\"]\n",
     "    for topic in step[\"topics\"]\n",
@@ -70,7 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
+   "id": "3fd32ae7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +91,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
+   "id": "ccfc5394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
+   "id": "253cd313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,16 +111,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
+   "id": "cb4114b1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 3)"
+       "(79, 3)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
+   "id": "35eaf3bf",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +142,7 @@
        "(0, 3)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,40 +154,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
+   "id": "f13c1b2e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>url</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>step_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>https://leetcode.com/problems/implement-strstr/</td>\n",
+       "      <td>Z-Function</td>\n",
+       "      <td>String</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <td>https://leetcode.com/problems/implement-strstr/</td>\n",
+       "      <td>KMP algo / LPS(pi) array</td>\n",
+       "      <td>String</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "url               https://leetcode.com/accounts/login/?next=/pro...\n",
-       "original_title                                The Celebrity Problem\n",
-       "step_title                                  Stack and Queue Part-II\n",
-       "Name: 90, dtype: object"
+       "                                                url            original_title  \\\n",
+       "77  https://leetcode.com/problems/implement-strstr/                Z-Function   \n",
+       "78  https://leetcode.com/problems/implement-strstr/  KMP algo / LPS(pi) array   \n",
+       "\n",
+       "   step_title  \n",
+       "77     String  \n",
+       "78     String  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[90]"
+    "df[df['url'].str.contains(\"implement-strstr\")]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
+   "id": "e5bf44ce",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace premium LeetCode problem with LintCode link\n",
-    "df.at[90, \"url\"] = \"https://www.lintcode.com/problem/645/\""
+    "# Fix the redirect urls\n",
+    "df.at[77, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\"\n",
+    "df.at[78, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
+   "id": "21627f7e",
    "metadata": {},
    "outputs": [
     {
@@ -187,39 +244,7 @@
        "(2, 3)"
       ]
      },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "redirect_urls = df[df[\"url\"].str.contains(\"implement-strstr\")]\n",
-    "redirect_urls.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix the redirect urls\n",
-    "df.at[97, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\"\n",
-    "df.at[98, \"url\"] = \"https://leetcode.com/problems/find-the-index-of-the-first-occurrence-in-a-string/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(20, 3)"
-      ]
-     },
-     "execution_count": 37,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,14 +258,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
+   "id": "c8343959",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total unique URLs with duplicates: 9\n"
+      "Total unique URLs with duplicates: 1\n"
      ]
     }
    ],
@@ -251,38 +277,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
+   "id": "8d5fcf3b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filter list is empty. Trying to expand all 191 URLs.\n",
-      "Resume option is set to false. Deleted previous checkpoint file: striver-sde-urls-expanded.json\n",
+      "Filter list is empty. Trying to expand all 79 URLs.\n",
+      "Resume option is set to false. Deleted previous checkpoint file: striver-79-urls-expanded.json\n",
       "\n",
       "Processing batch 1/1\n",
       "Loaded 0 results from checkpoint\n",
-      "Processing 191 pending URLs in this batch\n"
+      "Processing 79 pending URLs in this batch\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Expanding URLs: 100%|██████████| 191/191 [00:06<00:00, 27.57it/s]"
+      "Expanding URLs: 100%|██████████| 79/79 [00:01<00:00, 48.52it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Progress saved to striver-sde-urls-expanded.json\n",
+      "Progress saved to striver-79-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
-      "Progress saved to striver-sde-urls-expanded.json\n",
+      "Progress saved to striver-79-urls-expanded.json\n",
       "----------------------------------------------------------------------\n",
       "\n",
-      "191/191 URLs expanded in 9.93 seconds.\n"
+      "79/79 URLs expanded in 2.87 seconds.\n"
      ]
     },
     {
@@ -297,21 +324,22 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "standardised_df = await standardise_urls_async(df, \"striver-sde-urls-expanded.json\")"
+    "standardised_df = await standardise_urls_async(df, \"striver-79-urls-expanded.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
+   "id": "8fbceaf2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 5)"
+       "(79, 5)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +350,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 37,
+   "id": "a64cfbe5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,16 +363,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
+   "id": "f8b681eb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 6)"
+       "(79, 6)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +384,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
+   "id": "cc226563",
    "metadata": {},
    "outputs": [
     {
@@ -389,11 +420,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
-       "      <td>Set Matrix Zeros</td>\n",
-       "      <td>Arrays</td>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
-       "      <td>https://leetcode.com/problems/set-matrix-zeroes/</td>\n",
+       "      <td>https://leetcode.com/problems/next-permutation/</td>\n",
+       "      <td>Next Permutation</td>\n",
+       "      <td>Arrays and Hashing</td>\n",
+       "      <td>https://leetcode.com/problems/next-permutation/</td>\n",
+       "      <td>https://leetcode.com/problems/next-permutation/</td>\n",
        "      <td>problem</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -401,17 +432,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                url    original_title  \\\n",
-       "0  https://leetcode.com/problems/set-matrix-zeroes/  Set Matrix Zeros   \n",
+       "                                               url    original_title  \\\n",
+       "0  https://leetcode.com/problems/next-permutation/  Next Permutation   \n",
        "\n",
-       "  step_title                                      expanded_url  \\\n",
-       "0     Arrays  https://leetcode.com/problems/set-matrix-zeroes/   \n",
+       "           step_title                                     expanded_url  \\\n",
+       "0  Arrays and Hashing  https://leetcode.com/problems/next-permutation/   \n",
        "\n",
-       "                              expanded_stripped_url     type  \n",
-       "0  https://leetcode.com/problems/set-matrix-zeroes/  problem  "
+       "                             expanded_stripped_url     type  \n",
+       "0  https://leetcode.com/problems/next-permutation/  problem  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,38 +453,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
+   "id": "71a2bc39",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 191 URLs.\n",
+      "Found 79 URLs.\n",
       "Resume is disabled. Deleting old checkpoint...\n",
       "\n",
-      "Batch 1/1: items 0-190\n",
+      "Batch 1/1: items 0-78\n",
       "Loaded 0 from checkpoint\n",
-      "Processing 191 URLs...\n"
+      "Processing 79 URLs...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fetching items: 100%|██████████| 191/191 [00:06<00:00, 30.96it/s] "
+      "Fetching items: 100%|██████████| 79/79 [00:02<00:00, 34.95it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved progress (191 items) to striver-sde-info-added.json\n",
+      "Saved progress (79 items) to striver-79-info-added.json\n",
       "------------------------------\n",
-      "Saved progress (191 items) to striver-sde-info-added.json\n",
+      "Saved progress (79 items) to striver-79-info-added.json\n",
       "------------------------------\n",
       "\n",
-      "Fetched 191/191 items in 6.2s.\n"
+      "Fetched 79/79 items in 2.3s.\n"
      ]
     },
     {
@@ -469,21 +501,22 @@
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "final_df = await fetch_info(standardised_df, \"striver-sde-info-added.json\")"
+    "final_df = await fetch_info(standardised_df, \"striver-79-info-added.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 41,
+   "id": "12d12e98",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(191, 9)"
+       "(79, 9)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +527,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 42,
+   "id": "eef31781",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,6 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "fc6724a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -529,5 +564,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 5
 }
